Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55073

QBluetoothSocket::connectToService should report UnsupportedProtocolError early

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.2
    • 5.6, 5.7, 5.8
    • None

    Description

      It's possible to create a QBluetoothSocket with 'UnknownProtocol' type and then continue with connectToService. On OS X (for example) this results in UnknownError instead of documented/expected UknownProtocolError. Also, it's possible to call overloaded connectToService and this will result in undesired device discovery (undesired, since we'll fail to connect after all).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tpochep Timur Pocheptsov
            tpochep Timur Pocheptsov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes